@@ -53,6 +53,7 @@ Version 1.1.4 to be released
 - Enh #1471: CActiveForm AJAX validation should be cancelled when the form is already submitted (Qiang)
 - Enh #1509: Improved CMarkdownParser so that it can be used in console mode (Qiang)
 - Enh #1525: Added support to allow customizing 'name' attribute of checkboxes generated by CCheckBoxColumn (Qiang)
+- Enh #1532: Exposed the serviceName and namespace properties of CWsdlGenerator (Qiang)
 - Enh: Added CPortlet::hideOnEmpty property (Qiang)
 - Enh: Added CValidator::safe to allow marking a validator as safe or unsafe (Qiang)
 - Enh: Added CDbCacheDependency::params (Qiang)
